--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -6,30 +6,29 @@ on:
       - main
       - master
       - develop
-      
+
 jobs:
-    build:
-    runs-on: ubuntu-latest
+  build:
+  runs-on: ubuntu-latest
 
-    steps:
-      - uses: actions/checkout@v2
-        with: 
-          ref: 'main'
-      # Setup .npmrc file to publish to npm
-      - uses: actions/setup-node@v2
-        with:
-          node-version: "16.x"
-          registry-url: "https://registry.npmjs.org"
+  steps:
+    - uses: actions/checkout@v2
+      with:
+        ref: "main"
+    # Setup .npmrc file to publish to npm
+    - uses: actions/setup-node@v2
+      with:
+        node-version: "16.x"
+        registry-url: "https://registry.npmjs.org"
 
-    steps:
-      - name: Install deps
-        run: cd docs && npm i
+    - name: Install deps
+      run: cd docs && npm i
 
-      - name: Build
-        run: npm run build
+    - name: Build
+      run: npm run build
 
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: build
+    - name: Deploy to GitHub Pages
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: build
