--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -23,10 +23,10 @@ jobs:
         run: cd docs && npm i
 
       - name: Build
-        run: npm run build
+        run: cd docs && npm run build
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: build
+          publish_dir: docs/src/.vuepress/dist
