--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -30,4 +30,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: docs/src/.vuepress/dist
-          cname: docs.wells.io
+          cname: docs.wellms.io
